--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ body {
 
 .section-text {
   font-size: 1.6rem;
-  line-height: 1.65;
+  line-height: 1.8;
 }
 
 .btn {
@@ -58,7 +58,7 @@ body {
 }
 
 .btn-link {
-  margin: 2rem 0;
+  margin: 2.5rem 0;
   padding: 1.5rem 2.5rem;
   display: inline-block;
   position: relative;
@@ -236,6 +236,60 @@ body {
   background-color: #ffb046;
 }
 
+.container .navigation__menu {
+  width: 100%;
+}
+
+.container .navigation .menu {
+  position: fixed;
+  top: 80px;
+  left: 0;
+  background-color: #3d3d3d;
+  -webkit-box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.27);
+          box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.27);
+  overflow: hidden;
+  list-style-type: none;
+  -webkit-transform-origin: top;
+          transform-origin: top;
+  -webkit-transform: scaleY(0);
+          transform: scaleY(0);
+  -webkit-transition: all .3s ease-out;
+  transition: all .3s ease-out;
+}
+
+.container .navigation .menu--active {
+  -webkit-transform: scaleY(1);
+          transform: scaleY(1);
+}
+
+.container .navigation .menu__item {
+  margin: 1.5rem;
+  position: relative;
+}
+
+.container .navigation .menu__item:nth-child(2) {
+  margin-top: .5rem;
+}
+
+.container .navigation .menu__item .menu__link {
+  font-size: 1.8rem;
+  text-transform: uppercase;
+  color: #fff;
+  -webkit-transition: color .3s ease-out;
+  transition: color .3s ease-out;
+}
+
+.container .navigation .menu__item .menu__link:hover {
+  color: #ffb046;
+}
+
+.container .navigation .menu__image {
+  width: 125px;
+  position: absolute;
+  right: 0;
+  bottom: -3px;
+}
+
 .container .header {
   min-height: calc(100vh - 80px);
   margin-top: 80px;
@@ -265,6 +319,19 @@ body {
 
 .container .header__text {
   text-align: center;
-  padding: 0 1rem;
+  padding: 0 1.25rem;
+}
+
+.container .map__link {
+  text-transform: lowercase;
+}
+
+.container .recruitment__image {
+  width: 100%;
+}
+
+.container .plugins .list {
+  font-size: 1.6rem;
+  list-style-position: inside;
 }
 /*# sourceMappingURL=style.css.map */
