--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,10 @@ body {
   line-height: 1.8;
 }
 
+.bold {
+  font-weight: 700;
+}
+
 .btn {
   cursor: pointer;
   border: none;
@@ -66,7 +70,7 @@ body {
   right: -5px;
   z-index: 1;
   font-size: 1.8rem;
-  text-transform: uppercase;
+  text-transform: lowercase;
   color: #000;
 }
 
@@ -120,7 +124,7 @@ body {
   top: 0;
   left: 0;
   z-index: 2;
-  background-color: #3d3d3d;
+  background-color: #2c2c2c;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -244,9 +248,9 @@ body {
   position: fixed;
   top: 80px;
   left: 0;
-  background-color: #3d3d3d;
-  -webkit-box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.27);
-          box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.27);
+  background-color: #2c2c2c;
+  -webkit-box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.5);
+          box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.5);
   overflow: hidden;
   list-style-type: none;
   -webkit-transform-origin: top;
@@ -273,7 +277,7 @@ body {
 
 .container .navigation .menu__item .menu__link {
   font-size: 1.8rem;
-  text-transform: uppercase;
+  text-transform: lowercase;
   color: #fff;
   -webkit-transition: color .3s ease-out;
   transition: color .3s ease-out;
@@ -284,10 +288,12 @@ body {
 }
 
 .container .navigation .menu__image {
-  width: 125px;
+  width: 150px;
   position: absolute;
-  right: 0;
-  bottom: -3px;
+  bottom: 0;
+  right: -35px;
+  -webkit-transform: rotate(-35deg);
+          transform: rotate(-35deg);
 }
 
 .container .header {
@@ -322,16 +328,62 @@ body {
   padding: 0 1.25rem;
 }
 
-.container .map__link {
-  text-transform: lowercase;
-}
-
 .container .recruitment__image {
   width: 100%;
 }
 
-.container .plugins .list {
+.container .additionals .list {
+  list-style: none;
   font-size: 1.6rem;
-  list-style-position: inside;
+  line-height: 1.8;
+}
+
+.container .footer {
+  padding: 2rem;
+  background-color: #2c2c2c;
+  color: #fff;
+}
+
+.container .footer-container {
+  margin-bottom: 1.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.container .footer-container:nth-last-child(1) {
+  margin-bottom: 0;
+}
+
+.container .footer-container__title {
+  margin-bottom: .5rem;
+  font-size: 2rem;
+  color: #ffb046;
+}
+
+.container .footer-container__text {
+  font-size: 1.5rem;
+  line-height: 1.8;
+}
+
+.container .footer-container__link {
+  font-size: 1.5rem;
+  line-height: 1.8;
+  color: #0a93ff;
+}
+
+.container .footer__text {
+  font-size: 1.2rem;
+  text-align: center;
 }
 /*# sourceMappingURL=style.css.map */
