--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ html {
   color: #000;
   font-size: 62.5%;
   scroll-behavior: smooth;
-  scroll-padding-top: 80px;
+  scroll-padding-top: 85px;
 }
 
 body {
@@ -128,14 +128,20 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
-.container .navigation__logo {
+.container .navigation__link {
+  display: block;
+  margin-left: 2rem;
+}
+
+.container .navigation__link .navigation__logo {
   width: 175px;
 }
 
@@ -144,7 +150,7 @@ body {
   height: 34px;
   position: relative;
   top: 0;
-  right: 0;
+  right: 20px;
   z-index: 1;
 }
 
@@ -246,19 +252,26 @@ body {
 
 .container .navigation .menu {
   position: fixed;
-  top: 80px;
-  left: 0;
   background-color: #2c2c2c;
-  -webkit-box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.5);
-          box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.5);
   overflow: hidden;
   list-style-type: none;
+}
+
+.container .navigation .menu--vertical {
+  top: 80px;
+  left: 0;
+  -webkit-box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.5);
+          box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.5);
   -webkit-transform-origin: top;
           transform-origin: top;
   -webkit-transform: scaleY(0);
           transform: scaleY(0);
   -webkit-transition: all .3s ease-out;
   transition: all .3s ease-out;
+}
+
+.container .navigation .menu--horizontal {
+  display: none;
 }
 
 .container .navigation .menu--active {
@@ -269,10 +282,6 @@ body {
 .container .navigation .menu__item {
   margin: 1.5rem;
   position: relative;
-}
-
-.container .navigation .menu__item:nth-child(2) {
-  margin-top: .5rem;
 }
 
 .container .navigation .menu__item .menu__link {
@@ -300,6 +309,7 @@ body {
   min-height: calc(100vh - 80px);
   margin-top: 80px;
   overflow: hidden;
+  text-align: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -307,29 +317,47 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-flow: column nowrap;
           flex-flow: column nowrap;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
 .container .header__image {
-  width: 480px;
+  width: 320px;
   margin: 2rem 0;
-  position: relative;
-  left: 15px;
   opacity: .8;
 }
 
-.container .header__text {
-  text-align: center;
+.container .header__description {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container .header__description .header__text {
   padding: 0 1.25rem;
+}
+
+.container .map__link:hover {
+  text-decoration: underline;
 }
 
 .container .recruitment__image {
   width: 100%;
+}
+
+.container .recruitment__link:hover {
+  text-decoration: underline;
 }
 
 .container .additionals .list {
@@ -345,6 +373,7 @@ body {
 }
 
 .container .footer-container {
+  max-width: 500px;
   margin-bottom: 1.5rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -368,6 +397,7 @@ body {
 .container .footer-container__title {
   margin-bottom: .5rem;
   font-size: 2rem;
+  text-shadow: 1px 1px #000;
   color: #ffb046;
 }
 
@@ -382,8 +412,96 @@ body {
   color: #0a93ff;
 }
 
+.container .footer-container__link:hover {
+  text-decoration: underline;
+}
+
 .container .footer__text {
   font-size: 1.2rem;
   text-align: center;
+}
+
+@media (min-width: 576px) {
+  .container .navigation .menu__image {
+    width: 180px;
+  }
+  .container .header__image {
+    width: 420px;
+  }
+  .container .additionals .list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+  }
+  .container .additionals .list__item {
+    font-size: 1.75rem;
+    -ms-flex-preferred-size: 50%;
+        flex-basis: 50%;
+  }
+  .container .footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
+  .container .footer-container {
+    margin: 0 1rem;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+  }
+  .container .footer-container:first-child {
+    -webkit-box-flex: 2;
+        -ms-flex: 2;
+            flex: 2;
+  }
+  .container .footer__text {
+    margin-top: 1rem;
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
+}
+
+@media (min-width: 768px) {
+  .container .header {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row nowrap;
+            flex-flow: row nowrap;
+  }
+  .container .header__image {
+    width: 380px;
+    margin: 0;
+  }
+  .container .navigation {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  .container .navigation .hamburger, .container .navigation .menu--vertical {
+    display: none;
+  }
+  .container .navigation .menu--horizontal {
+    position: static;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+  .container .navigation .menu__item {
+    margin: 0;
+  }
 }
 /*# sourceMappingURL=style.css.map */
