--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,8 @@ $black: #000;
 $yellow: #ffb046;
 $dark-gray: #2c2c2c;
 $link-color: #005ba3;
+$small-devices: 576px;
+$medium-devices: 768px;
 
 *,
 *::before,
@@ -18,7 +20,7 @@ html{
   color: $black;
   font-size: 62.5%;
   scroll-behavior: smooth;
-  scroll-padding-top: 80px;
+  scroll-padding-top: 85px;
 }
 
 body{
@@ -120,13 +122,18 @@ body{
     top: 0;
     left: 0;
     z-index: 2;
-    background-color:  $dark-gray;
+    background-color: $dark-gray;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 
-    &__logo{
-      width: 175px;
+    &__link{
+      display: block;
+      margin-left: 2rem;
+
+      .navigation__logo{
+        width: 175px;
+      }
     }
 
     &__hamburger{
@@ -134,7 +141,7 @@ body{
       height: 34px;
       position: relative;
       top: 0;
-      right: 0;
+      right: 20px;
       z-index: 1;
    }
 
@@ -215,15 +222,22 @@ body{
 
     .menu{
       position: fixed;
-      top: 80px;
-      left: 0;
       background-color: $dark-gray;
-      box-shadow: 0 5px 5px 0 rgba(0, 0, 0, .5);
       overflow: hidden;
       list-style-type: none;
-      transform-origin: top;
-      transform: scaleY(0);
-      transition: all .3s ease-out;
+
+      &--vertical{
+        top: 80px;
+        left: 0;
+        box-shadow: 0 5px 5px 0 rgba(0, 0, 0, .5);
+        transform-origin: top;
+        transform: scaleY(0);
+        transition: all .3s ease-out;
+      }
+
+      &--horizontal{
+        display: none;
+      }
 
       &--active{
         transform: scaleY(1);
@@ -232,10 +246,6 @@ body{
       &__item{
         margin: 1.5rem;
         position: relative;
-
-        &:nth-child(2){
-          margin-top: .5rem;
-        }
 
         .menu__link{
           font-size: 1.8rem;
@@ -263,28 +273,46 @@ body{
     min-height: calc(100vh - 80px);
     margin-top: 80px;
     overflow: hidden;
+    text-align: center;
     display: flex;
     flex-flow: column nowrap;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
 
     &__image{
-      width: 480px;
+      width: 320px;
       margin: 2rem 0;
-      position: relative;
-      left: 15px;
       opacity: .8;
     }
 
-    &__text{
-      text-align: center;
-      padding: 0 1.25rem;
+    &__description{
+      display: flex;
+      flex-flow: column nowrap;
+      align-items: center;
+      
+      .header__text{
+        padding: 0 1.25rem;
+      }
+    }
+  }
+
+  .map{
+    &__link{
+      &:hover{
+        text-decoration: underline;
+      }
     }
   }
 
   .recruitment{
     &__image{
       width: 100%;
+    }
+
+    &__link{
+      &:hover{
+        text-decoration: underline;
+      }
     }
   }
 
@@ -302,6 +330,7 @@ body{
     color: $white;
 
     &-container{
+      max-width: 500px;
       margin-bottom: 1.5rem;
       display: flex;
       flex-flow: column wrap;
@@ -315,6 +344,7 @@ body{
       &__title{
         margin-bottom: .5rem;
         font-size: 2rem;
+        text-shadow: 1px 1px $black;
         color: $yellow;
       }
   
@@ -326,7 +356,11 @@ body{
       &__link{
         font-size: 1.5rem;
         line-height: 1.8;
-        color: lighten($color: $link-color, $amount: 20%)
+        color: lighten($color: $link-color, $amount: 20%);
+
+        &:hover{
+          text-decoration: underline;
+        }
       }
     }
 
@@ -337,5 +371,81 @@ body{
   }
 }
 
+@media (min-width: $small-devices){
+  .container{
+    .navigation{
+      .menu__image{
+        width: 180px;
+      }
+    }
 
+    .header__image{
+      width: 420px;
+    }
 
+    .additionals{
+      .list{
+        display: flex;
+        flex-flow: row wrap;
+
+        &__item{
+          font-size: 1.75rem;
+          flex-basis: 50%;
+        }
+      }
+    }
+
+    .footer{
+      display: flex;
+      flex-flow: row wrap;
+      align-items: baseline;
+
+      &-container{
+        margin: 0 1rem;
+        flex: 1;
+
+        &:first-child{
+          flex: 2;
+        }
+      }
+
+      &__text{
+        margin-top: 1rem;
+        flex-basis: 100%;
+      }
+    }
+  }
+}
+
+@media (min-width: $medium-devices){
+  .container{
+    .header{
+      flex-flow: row nowrap;
+
+      &__image{
+        width: 380px;
+        margin: 0;
+      }
+    }
+
+    .navigation{
+      justify-content: flex-start;
+      
+      .hamburger, .menu--vertical{
+        display: none;
+      }
+
+      .menu{
+        &--horizontal{
+          position: static;
+          display: flex;
+          justify-content: space-evenly;
+        }
+
+        &__item{
+          margin: 0;
+        }
+      }
+    }
+  }
+}
