--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
 
 .section {
   width: 90%;
-  margin: 2rem auto;
+  margin: 3rem auto;
   text-align: center;
 }
 
@@ -502,6 +502,35 @@ body {
   }
   .container .navigation .menu__item {
     margin: 0;
+  }
+  .container .recruitment {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row nowrap;
+            flex-flow: row nowrap;
+  }
+  .container .recruitment__image {
+    margin-left: 1rem;
+    width: 380px;
+  }
+  .container .footer-container {
+    text-align: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .container .footer-container:first-child {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+  }
+  .container .footer__text {
+    margin-top: 1rem;
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
   }
 }
 /*# sourceMappingURL=style.css.map */
