--- a/scss/style.scss
+++ b/scss/style.scss
@@ -373,11 +373,6 @@ body{
       font-size: 1.2rem;
       text-align: center;
     }
-
-    &__line{
-      flex-basis: 100%;
-      margin-bottom: 1.5rem;
-    }
   }
 }
 
@@ -440,8 +435,8 @@ body{
         }
       }
 
-      &__line{
-        margin: 1.5rem;
+      &__text{
+        margin-top: 1.5rem;
       }
     }
   }
