--- a/scss/style.scss
+++ b/scss/style.scss
@@ -68,7 +68,7 @@ body{
 }
 
 .btn-link{
-  margin: 2.5rem 0;
+  margin: 3rem 0;
   padding: 1.5rem 2.5rem;
   display: inline-block;
   position: relative;
@@ -117,6 +117,7 @@ body{
   .navigation{
     width: 100%;
     height: 80px;
+    padding: 0 2rem;
     position: fixed;
     top: 0;
     left: 0;
@@ -128,7 +129,7 @@ body{
 
     &__link{
       display: block;
-      margin-left: 2rem;
+      margin-right: 2rem;
 
       .navigation__logo{
         width: 175px;
@@ -140,7 +141,7 @@ body{
       height: 34px;
       position: relative;
       top: 0;
-      right: 20px;
+      right: 0;
       z-index: 1;
    }
 
@@ -267,6 +268,10 @@ body{
         transform: rotate(-35deg);
       }
     }
+
+    &__icon-link{
+      display: none;
+    }
   }
 
   .header{
@@ -309,6 +314,13 @@ body{
   }
 
   .recruitment{
+    &__description{
+      display: flex;
+      flex-flow: column nowrap;
+      justify-content: center;
+      align-items: center;
+    }
+
     &__image{
       width: 100%;
     }
@@ -467,11 +479,28 @@ body{
         &--horizontal{
           position: static;
           display: flex;
-          justify-content: space-evenly;
         }
 
         &__item{
-          margin: 0;
+          margin: 0 1rem;
+        }
+      }
+
+      &__icon-link{
+        display: block;
+        padding: .5rem;
+        transition: all .3s ease-in-out;
+
+        &:hover{
+          opacity: .5;  
+        }
+        
+        &:last-child{
+          margin-left: 1rem;
+        }
+
+        .navigation__icon{
+          width: 32px;
         }
       }
     }
@@ -526,6 +555,24 @@ body{
 
       &__description{
         width: 40%;
+      }
+    }
+
+    .navigation{
+      .menu{  
+        &__item{
+          margin: 0 2rem;
+
+          .menu__link{
+            font-size: 2rem;
+          }
+        }
+      }
+
+      &__icon-link{
+        .navigation__icon{
+          width: 40px;
+        }
       }
     }
 
