--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,9 +4,6 @@ $black: #000;
 $yellow: #ffb046;
 $dark-gray: #2c2c2c;
 $link-color: #005ba3;
-$small-devices: 576px;
-$medium-devices: 768px;
-$large-devices: 992px;
 
 *,
 *::before,
@@ -26,580 +23,12 @@ body{
   background: url("../assets/background.png");
 }
 
-.section{
-  width: 90%;
-  margin: 3rem auto;
-  text-align: center;
-
-  &-title{
-    font-size: 3rem;
-    text-transform: uppercase;
-    text-shadow: 1px 1px $black;
-    color: $yellow;
-  }
-  
-  &-text{
-    font-size: 1.6rem;
-    line-height: 1.8;
-  }
+.graba{
+   height: 100vh;
+   font-size: 2.4rem;
+   text-align: center;
+   color: $yellow;
+   display: flex;
+   justify-content: center;
+   align-items: center;
 }
-
-.bold{
-  font-weight: 700;
-}
-
-.btn{
-  cursor: pointer;
-  border: none;
-  background: none;
-  text-align: center;
-  transition: all .3s ease-out;
-  color: $black;
-
-  &:focus{
-     outline: none;
-  }
-}
-
-.link{
-  color: $link-color;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.btn-link{
-  margin: 3rem 0;
-  padding: 1.5rem 2.5rem;
-  display: inline-block;
-  position: relative;
-  top: -5px;
-  right: -5px;
-  z-index: 1;
-  font-size: 1.8rem;
-  text-transform: lowercase;
-  color: $black;
-
-  &:hover::before {
-    transform: translate(5px, -5px);
-  }
-
-  &:hover::after {
-    transform: translate(-5px, 5px);
-  }
-
-  &::before{
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    background-color: $yellow;
-    z-index: -1;
-    transition: transform 0.15s ease-out 0s;
-  }
-
-  &::after{
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    border: 1px solid $black;
-    transition: transform 0.15s ease-out 0s;
-  }
-}
-
-.container{
-  width: 100%;
-
-  .navigation{
-    width: 100%;
-    height: 80px;
-    padding: 0 2rem;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 2;
-    background-color: $dark-gray;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    &__link{
-      display: block;
-      margin-right: 2rem;
-
-      .navigation__logo{
-        width: 175px;
-        transition: all .3s ease;
-
-        &:hover{
-          transform: rotate(2deg);
-        }
-      }
-    }
-
-    &__hamburger{
-      width: 40px;
-      height: 34px;
-      position: relative;
-      top: 0;
-      right: 0;
-      z-index: 1;
-   }
-
-   .hamburger{
-      overflow: visible;
-      transition-timing-function: linear;
-      transition-duration: .15s;
-      transition-property: opacity, filter;
-      color: inherit;
-      background-color: transparent;
-      transition: all .3s ease-in-out;
-
-      &:hover{
-         opacity: .8;
-      }
-
-      &__bar{
-         content: "";
-         width: 100%;
-         height: 6px;
-         background-color: $white;
-         position: absolute;
-         top: 0;
-         left: 0;
-         margin: auto;
-         border-radius: .2rem;
-         transition: background-color 0s linear .13s;
-
-         &::before,
-         &::after{
-            content: "";
-            width: 100%;
-            height: 6px;
-            background-color: $white;
-            position: absolute;
-            top: 0;
-            left: 0;
-            margin: auto;
-            border-radius: .2rem;
-         }
-
-         &::before{
-            top: 14px;
-            transition: top .1s cubic-bezier(.33333,.66667,.66667,1) .2s,transform .13s cubic-bezier(.55,.055,.675,.19);
-         }
-
-         &::after{
-            top: 28px;
-            transition: top .2s cubic-bezier(.33333,.66667,.66667,1) .2s,transform .13s cubic-bezier(.55,.055,.675,.19);
-         }
-      }
-
-      &--active{
-         transition-delay: .22s;
-         background-color: transparent;
-
-         &::after{
-            width: 100%;
-            top: 0;
-            transition: top .2s cubic-bezier(.33333,0,.66667,.33333),transform .13s cubic-bezier(.215,.61,.355,1) .22s;
-            transform: translate3d(0,10px,0) rotate(-45deg);
-            background-color: $yellow;
-         }
-
-         &::before{
-            width: 100%;
-            top: 0;
-            transition: top .1s cubic-bezier(.33333,0,.66667,.33333) .15s,transform .13s cubic-bezier(.215,.61,.355,1) .22s;
-            transform: translate3d(0,10px,0) rotate(45deg);
-            background-color: $yellow;
-         }
-      }
-    }
-
-    &__menu{
-      width: 100%;
-    }
-
-    .menu{
-      position: fixed;
-      background-color: $dark-gray;
-      overflow: hidden;
-      list-style-type: none;
-
-      &--vertical{
-        top: 80px;
-        left: 0;
-        box-shadow: 0 5px 5px 0 rgba(0, 0, 0, .5);
-        transform-origin: top;
-        transform: scaleY(0);
-        transition: all .3s ease-out;
-      }
-
-      &--horizontal{
-        display: none;
-      }
-
-      &--active{
-        transform: scaleY(1);
-      }
-
-      &__item{
-        margin: 1.25rem 2rem;
-        position: relative;
-
-        .menu__link{
-          font-size: 1.8rem;
-          text-transform: uppercase;
-          font-weight: 700;
-          color: $white;
-          transition: color .3s ease-out;
-
-          &:hover{
-             color: $yellow;
-          }
-        }
-      }
-
-      &__image{
-        width: 150px;
-        position: absolute;
-        bottom: 0;
-        right: -35px;
-        transform: rotate(-35deg);
-      }
-    }
-
-    &__icon-link{
-      display: none;
-    }
-  }
-
-  .header{
-    width: 90%;
-    margin: 110px auto 0;
-    overflow: hidden;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center;
-
-    &__image{
-      display: none;
-    }
-
-    &__description{
-      display: flex;
-      flex-flow: column nowrap;
-
-      .header__title{
-        margin-bottom: 1rem;
-      }
-
-      .header__text{
-        line-height: 2;
-      }
-
-      .header__link{
-        align-self: center;
-      }
-    }
-  }
-
-  .map{
-    &__link{
-      &:hover{
-        text-decoration: underline;
-      }
-    }
-  }
-
-  .recruitment{
-    &__description{
-      display: flex;
-      flex-flow: column nowrap;
-      justify-content: center;
-      align-items: center;
-    }
-
-    &__image{
-      width: 100%;
-    }
-
-    &__link{
-      &:hover{
-        text-decoration: underline;
-      }
-    }
-  }
-
-  .additionals{
-    .list{
-      list-style: none;
-      font-size: 1.6rem;
-      line-height: 1.8;
-    }
-  }
-
-  .footer{
-    padding: 2rem;
-    background-color: $dark-gray;
-    color: $white;
-
-    &-container{
-      max-width: 300px;
-      margin-bottom: 1.5rem;
-      display: flex;
-      flex-flow: column wrap;
-      justify-content: center;
-      align-items: flex-start;
-
-      &:nth-last-child(1){
-        margin-bottom: 0;
-      }
-
-      &__title{
-        margin-bottom: .5rem;
-        font-size: 2rem;
-        text-shadow: 1px 1px $black;
-        color: $yellow;
-      }
-  
-      &__text{
-        font-size: 1.5rem;
-        line-height: 1.8;
-      }
-  
-      &__link{
-        font-size: 1.5rem;
-        line-height: 1.8;
-        color: lighten($color: $link-color, $amount: 20%);
-
-        &:hover{
-          text-decoration: underline;
-        }
-      }
-    }
-
-    &__text{
-      flex-basis: 100%;
-      font-size: 1.2rem;
-      text-align: center;
-    }
-  }
-}
-
-@media (min-width: $small-devices){
-  .container{
-    .navigation{
-      .menu__image{
-        width: 180px;
-      }
-    }
-
-    .header{
-      width: 100%;
-      height: 100%;
-      flex-flow: row nowrap;
-
-      &__image{
-        display: block;
-        width: 45%;
-      }
-
-      &__description{
-        margin-right: 2rem;
-        align-items: center;
-
-        .header__title{
-          margin: 0;
-        }
-
-        .header__text{
-          line-height: 1.8;
-          text-align: center;
-        }
-      }
-    }
-
-    .additionals{
-      .list{
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: center;
-
-        &__item{
-          font-size: 1.75rem;
-          flex-basis: 50%;
-        }
-      }
-    }
-
-    .footer{
-      display: flex;
-      flex-flow: row wrap;
-      align-items: baseline;
-
-      &-container{
-        margin: 0 1rem;
-        flex: 1;
-
-        &:first-child{
-          flex: 2;
-        }
-      }
-
-      &__text{
-        margin-top: 1.5rem;
-      }
-    }
-  }
-}
-
-@media (min-width: $medium-devices){
-  .container{
-    .section-text{
-      font-size: 1.7rem;
-    }
-
-    .header{
-      flex-flow: row nowrap;
-
-      &__image{
-        width: 50%;
-      }
-    }
-
-    .navigation{
-      justify-content: flex-start;
-      
-      .hamburger, .menu--vertical{
-        display: none;
-      }
-
-      .menu{
-        &--horizontal{
-          position: static;
-          display: flex;
-        }
-
-        &__item{
-          margin: 0 1rem;
-        }
-      }
-
-      &__icon-link{
-        display: block;
-        padding: .5rem;
-        transition: all .3s ease-in-out;
-
-        &:hover{
-          opacity: .65;  
-        }
-        
-        &:last-child{
-          margin-left: 1rem;
-        }
-
-        .navigation__icon{
-          width: 32px;
-        }
-      }
-    }
-
-    .recruitment{
-      display: flex;
-      flex-flow: row nowrap;
-
-      &__image{
-        margin-left: 1rem;
-        width: 55%;
-      }
-    }
-
-    .footer{
-      &-container{
-        text-align: center;
-        align-items: center;
-
-        &:first-child{
-          flex: 1;
-        }
-      }
-
-      &__text{
-        flex-basis: 100%;
-      }
-    }
-  }
-}
-
-@media (min-width: $large-devices){
-  .container{
-    .section-title{
-      font-size: 3.5rem;
-      margin-bottom: .5rem;
-    }
-
-    .section-text{
-      font-size: 1.8rem;
-      line-height: 2;
-    }
-
-    .btn-link{
-      font-size: 2rem;
-    }
-  
-    .header{
-      &__image{
-        width: 40%;
-      }
-
-      &__description{
-        width: 40%;
-      }
-    }
-
-    .navigation{
-      .menu{  
-        &__item{
-          margin: 0 2rem;
-
-          .menu__link{
-            font-size: 2rem;
-          }
-        }
-      }
-
-      &__icon-link{
-        .navigation__icon{
-          width: 40px;
-        }
-      }
-    }
-
-    .additionals{
-      .list{
-        justify-content: center;
-        line-height: 2;
-        
-        &__item{
-          font-size: 2rem;
-          flex-basis: 33%;
-        }
-      }
-    }
-
-    .footer{
-      &-container{
-        max-width: inherit;
-      }
-    }
-  }
-}
-
-
